--- a/.env
+++ b/.env
@@ -1,2 +1,1 @@
-REACT_APP_BACKEND_URL=https://snapshot-api.tezos.marigold.dev/
-REACT_APP_NODES=MAINNET,ITHACANET,HANGZHOUNET
+REACT_APP_NODES=MAINNET,ITHACANET
